added new packages

--- a/.gitignore
+++ b/.gitignore
@@ -124,7 +124,10 @@ sftp-config.json
 !.vscode/extensions.json 
 .history
 
-# DO NOT IGNORE DEFAULT PROFILE PICTURE AND DEFAULT HOUSE
+
 
 account/migrations
 project/migrations
+
+# Steps File
+project_steps.txt
